--- a/papis/5b13007b32e36ac093732272241d6f10-kim-gene/info.yaml
+++ b/papis/5b13007b32e36ac093732272241d6f10-kim-gene/info.yaml
@@ -44,7 +44,7 @@ note: 'Length:  12:24
   Narrator: Frankie Corzo'
 papis_id: 2b789cebdc90e5024657d599f0ff47a5
 ref: TheUnicornProKimG2019
-shorttitle: The {Unicorn} {Project}
+shorttitle: The Unicorn Project
 title: The Unicorn Project (audibook)
 type: book
 year: '2019'
